--- a/comicsdb/templates/comicsdb/week_list.html
+++ b/comicsdb/templates/comicsdb/week_list.html
@@ -5,9 +5,8 @@
 {% block title %}New Comics{% endblock title %}
 
 {% block content %}
-
   {% if issue_list %}
-      <!-- hero -->
+    <!-- hero -->
     <section class="hero">
       <div class="hero-body">
         <div class="container has-text-centered">
@@ -20,57 +19,63 @@
     <!-- week list -->
     <section>
       <div class="container">
-        <!-- main box -->
-        <div class="box">
-          <!-- navigation -->
-          <nav class="level">
-            <!-- search box -->
-            <div class="level-left">
-              <div class="level-item">
-                <p class="subtitle is-5">
-                  {% if page_obj.paginator %}
-                    <strong>{{ page_obj.paginator.count }}</strong> Issue{{ page_obj.paginator.count|pluralize }}
-                  {% else %}
-                    <strong>{{ issue_list.count }}</strong> Issue{{ issue_list.count|pluralize }}
-                  {% endif %}
-                </p>
-              </div>
-              <div class="level-item">
-                <form action="{% url 'issue:search' %}" method="get" accept-charset="utf-8">
-                  <div class="field has-addons">
-                    <p class="control">
-                      <input class="input" name="q" type="search" placeholder="Find an issue">
-                    </p>
-                    <p class="control">
-                      <button class="button">Search</button>
-                    </p>
-                  </div>
-                </form>
-              </div>
-            </div>
-            <!-- end search box -->
-            <!-- add button -->
-            <div class="level-right">
-              <p class="level-item">
-                {% if user.is_authenticated %}
-                  <a class="button is-primary" href="{% url 'issue:create' %}" title="Add a new issue">
-                    <span class="icon is-small">
-                      <i class="fas fa-plus"></i>
-                    </span>
-                    <span>New</span>
-                  </a>
+        <!-- navigation -->
+        <nav class="level">
+          <!-- search box -->
+          <div class="level-left">
+            <div class="level-item">
+              <p class="subtitle is-5">
+                {% if page_obj.paginator %}
+                  <strong>{{ page_obj.paginator.count }}</strong> Issue{{ page_obj.paginator.count|pluralize }}
+                {% else %}
+                  <strong>{{ issue_list.count }}</strong> Issue{{ issue_list.count|pluralize }}
                 {% endif %}
               </p>
             </div>
-            <!-- end add button -->
-          </nav>
-          <!-- end navigation -->
+            <div class="level-item">
+              <form action="{% url 'issue:search' %}" method="get" accept-charset="utf-8">
+                <div class="field has-addons">
+                  <p class="control">
+                    <input class="input" name="q" type="search" placeholder="Find an issue">
+                  </p>
+                  <p class="control">
+                    <button class="button">Search</button>
+                  </p>
+                </div>
+              </form>
+            </div>
+          </div>
+          <!-- end search box -->
+          <!-- add button -->
+          <div class="level-right">
+            <p class="level-item">
+              {% if user.is_authenticated %}
+                <a class="button is-primary" href="{% url 'issue:create' %}" title="Add a new issue">
+                  <span class="icon is-small">
+                    <i class="fas fa-plus"></i>
+                  </span>
+                  <span>New</span>
+                </a>
+              {% endif %}
+            </p>
+          </div>
+          <!-- end add button -->
+        </nav>
+        <!-- end navigation -->
 
-          <!-- week columns -->
-          <div class="columns is-multiline">
-            {% for issue in issue_list %}
-              <div class="column is-one-quarter has-text-centered">
-                <a href="{% url 'issue:detail' issue.slug %}">
+        <!-- week columns -->
+        <div class="columns is-multiline">
+          {% for issue in issue_list %}
+            <div class="column is-one-quarter">
+              <!-- week card -->
+              <div class="card">
+                <!-- card header -->
+                <header class="card-header">
+                  <p class="card-header-title is-centered">{{ issue }}</p>
+                </header>
+                <!-- end card header -->
+                <!-- card image -->
+                <div class="card-image">
                   <figure class="image is-2by3">
                     {% if issue.image %}
                       {% thumbnail issue.image "320x480" crop="center" format="WEBP" as im %}
@@ -80,14 +85,20 @@
                       <img src="{% static 'site/img/image-not-found.webp' %}" alt="No image for {{ issue }}">
                     {% endif %}
                   </figure>
-                </a>
-                <a href="{% url 'issue:detail' issue.slug %}">{{ issue }}</a>
+                </div>
+                <!-- end card image -->
+                <!-- card footer -->
+                <footer class="card-footer">
+                  <p class="card-footer-item">{{ issue.cover_date|date:"M Y" }}</p>
+                  <a href="{% url 'issue:detail' issue.slug %}" class="card-footer-item">Info</a>
+                </footer>
+                <!-- end card footer -->
               </div>
-            {% endfor %}
-          </div>
-            <!-- end week columns -->
+              <!-- end week card -->
+            </div>
+          {% endfor %}
         </div>
-        <!-- end main box -->
+        <!-- end week columns -->
       </div>
     </section>
     <!-- end week list -->
