--- a/comicsdb/templates/comicsdb/home.html
+++ b/comicsdb/templates/comicsdb/home.html
@@ -39,8 +39,7 @@
     </div>
     <div class="level-item has-text-centered">
       <div>
-        <p class="title has-text-weight-normal"><span class="icon"><i class="fas fa-satellite-dish"></i></span>
-        </p>
+        <p class="title has-text-weight-normal"><span class="icon"><i class="fas fa-satellite-dish"></i></span></p>
         <p class="heading">REST API</p>
       </div>
     </div>
@@ -66,16 +65,13 @@
             <p class="title">What is Metron?</p>
             <p class="content">
               <strong>Metron</strong> is a community-based site whose goal is to build an open database
-              with a
-              <a href="https://en.wikipedia.org/wiki/Representational_state_transfer">REST</a> API for
-              comic books.
+              with a <a href="https://en.wikipedia.org/wiki/Representational_state_transfer">REST</a> API for comic
+              books.
             </p>
             <p class="content">
-              Currently the only comic book database the provides a REST API for users is
-              <a href="https://comicvine.gamespot.com/">Comic Vine</a>. Unfortunately, since it's a
-              corporately-owned
-              service, the community that uses it has no control over the amount of resources provided to
-              maintain it
+              Currently, the only comic book database the provides a REST API for users is
+              <a href="https://comicvine.gamespot.com/">Comic Vine</a>. Unfortunately, since it's a corporately-owned
+              service, the community that uses it has no control over the amount of resources provided to maintain it
               or ensure it's continued accessibility.
             </p>
           </div>
@@ -84,10 +80,8 @@
       <article class="tile is-child notification is-warning">
         <p class="title">Using the REST API</p>
         <p class="content">
-          If you want to use the data from Metron, there is a
-          <a href="https://www.python.org/">Python</a> wrapper called
-          <a href="https://github.com/Metron-Project/mokkari">Mokkari</a>
-          to make it easy to use the API.
+          If you want to use the data from Metron, there is a <a href="https://www.python.org/">Python</a> wrapper
+          called <a href="https://github.com/Metron-Project/mokkari">Mokkari</a> to make it easy to use the API.
         </p>
         <p class="content">
           Want to tag your comic archives with metadata from Metron? You can use either of the following projects:
@@ -115,16 +109,14 @@
         </p>
         <p class="content">
           Want to help with the technical side of Metron? Metron is built with
-          <a href="https://www.djangoproject.com/">Django</a>, so if you have knowledge of
-          Python and Django head over to <a href="https://github.com/bpepple/metron">Github</a>
-          to checkout the sites code.
+          <a href="https://www.djangoproject.com/">Django</a>, so if you have knowledge of Python and Django head over
+          to <a href="https://github.com/bpepple/metron">GitHub</a> to check out the sites code.
         </p>
       </article>
       <article class="tile is-child notification is-danger">
         <p class="title">Questions?</p>
         <p class="content">
-          Have questions not covered here or suggestions? If so, feel free to contact us at either of these
-          places:
+          Have questions not covered here or suggestions? If so, feel free to contact us at either of these places:
         </p>
         <div class="content">
           <ul>
@@ -138,52 +130,43 @@
   </div>
   <!-- end info-->
   <!-- recently edited issues -->
-  <div>
-    <column>
-      <!-- issue columns -->
-      <div class="columns is-multiline">
-        {% for issue in recently_edited %}
-          <div class="column is-one-quarter">
-            <!-- issue card-->
-            <div class="card">
-              <!-- card header -->
-              <header class="card-header">
-                {% with issue.created_on|is_new as is_new %}
-                  <p class="card-header-title is is-centered">
-                    {{ issue }}{% if is_new %}&nbsp;
-                      <span class="tag is-primary is-rounded">New!</span>{% endif %}
-                  </p>
-                {% endwith %}
-              </header>
-              <!-- end card header -->
-              <!-- card image -->
-              <div class="card-image">
-                <figure class="image is-2by3">
-                  {% if issue.image %}
-                    {% thumbnail issue.image "320x480" crop="center" format="WEBP" as im %}
-                      <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}"
-                           alt="{{ issue }}">
-                    {% endthumbnail %}
-                  {% else %}
-                    <img src="{% static 'site/img/image-not-found.webp' %}"
-                         alt="No image for {{ issue }}">
-                  {% endif %}
-                </figure>
-              </div>
-              <!-- end card image -->
-              <!-- card footer -->
-              <footer class="card-footer">
-                <p class="card-footer-item">{{ issue.cover_date|date:"M Y" }}</p>
-                <a href="{% url 'issue:detail' issue.slug %}" class="card-footer-item">Info</a>
-              </footer>
-              <!-- end card footer -->
-            </div>
-            <!-- end issue card -->
+  <div class="columns is-multiline">
+    {% for issue in recently_edited %}
+      <div class="column is-one-quarter">
+        <!-- issue card-->
+        <div class="card">
+          <!-- card header -->
+          <header class="card-header">
+            {% with issue.created_on|is_new as is_new %}
+              <p class="card-header-title is is-centered">
+                {{ issue }}{% if is_new %}&nbsp;<span class="tag is-primary is-rounded">New!</span>{% endif %}
+              </p>
+            {% endwith %}
+          </header>
+          <!-- end card header -->
+          <!-- card image -->
+          <div class="card-image">
+            <figure class="image is-2by3">
+              {% if issue.image %}
+                {% thumbnail issue.image "320x480" crop="center" format="WEBP" as im %}
+                  <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{ issue }}">
+                {% endthumbnail %}
+              {% else %}
+                <img src="{% static 'site/img/image-not-found.webp' %}" alt="No image for {{ issue }}">
+              {% endif %}
+            </figure>
           </div>
-        {% endfor %}
+          <!-- end card image -->
+          <!-- card footer -->
+          <footer class="card-footer">
+            <p class="card-footer-item">{{ issue.cover_date|date:"M Y" }}</p>
+            <a href="{% url 'issue:detail' issue.slug %}" class="card-footer-item">Info</a>
+          </footer>
+          <!-- end card footer -->
+        </div>
+        <!-- end issue card -->
       </div>
-      <!-- end issue columns -->
-    </column>
+    {% endfor %}
   </div>
   <!-- end recent issues -->
 {% endblock %}
