--- a/comicsdb/templates/comicsdb/universe_detail.html
+++ b/comicsdb/templates/comicsdb/universe_detail.html
@@ -112,6 +112,44 @@
         </div>
       </div>
       <!-- end desc -->
+      <!-- characters -->
+      {% with characters=universe.character_set.all %}
+        {% if characters %}
+          <div class="box">
+            <div class="columns">
+              <div class="column">
+                <h1 class="title is-5">Character{{ characters|pluralize }}</h1>
+                <div class="columns is-multiline">
+                  {% for character in characters %}
+                    <div class="column is-4">
+                      <article class="media">
+                        <div class="media-left">
+                          <figure class="image is-64x64">
+                            {% if character.image %}
+                              {% thumbnail character.image "64x64" crop="center" format="WEBP" as im %}
+                                <img class="is-rounded" src="{{ im.url }}" alt="{{ character }}">
+                              {% endthumbnail %}
+                            {% else %}
+                              <img class="is-rounded" src="{% static 'site/img/creator-not-found.webp' %}"
+                                   alt="No image for {{ character }}">
+                            {% endif %}
+                          </figure>
+                        </div>
+                        <div class="media-content">
+                          <div class="content">
+                            <p><a href="{% url 'character:detail' character.slug %}">{{ character }}</a></p>
+                          </div>
+                        </div>
+                      </article>
+                    </div>
+                  {% endfor %}
+                </div>
+              </div>
+            </div>
+          </div>
+        {% endif %}
+      {% endwith %}
+      <!-- end characters -->
       <!-- series -->
       {% with series=appearances %}
         {% if series %}
