--- a/comicsdb/templates/comicsdb/universe_detail.html
+++ b/comicsdb/templates/comicsdb/universe_detail.html
@@ -151,7 +151,7 @@
       {% endwith %}
       <!-- end characters -->
       <!-- teams -->
-      {% with teams=universe.team_set.all %}
+      {% with teams=universe.teams.all %}
         {% if teams %}
           <div class="box">
             <div class="columns">
